Fixes double scroll bar on drop down

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -156,12 +156,10 @@ p:last-of-type
   max-height: none
 
 .navbar-nav
-  margin: -1px -10px
-  +respond-to(not-xs)
-    margin: inherit
+  overflow-y:hidden
+  margin: inherit
   li
     text-align: left
-
     border-bottom: 1px solid #000
     +respond-to(not-xs)
       border-bottom: none
